09 Aug 2009: 1.1.0-dev0 Miek <rdup@miek.nl>