@@ -10,6 +10,8 @@ Default output to include:
     -%U  completely new: username, - when undefined
     -%G  completely new: groupname, - when undefined
 
+the rdup-up code can be converted to be used in rdup-tr
+
 Output always is in %c mode, no more filelist
 more. Write 1 parser for this input for rdup-tr
 and rdup-up, allow this to work with 0 delimited
